--- a/styles.css
+++ b/styles.css
@@ -209,6 +209,56 @@ body {
   display: none;
 }
 
+#autocomplete-container {
+  position: absolute;
+  width: 100%;
+  max-height: 300px;
+  background-color: var(--dark-card);
+  z-index: 999;
+  box-shadow: var(--card-shadow);
+  border: 1px solid rgba(255, 255, 255, 0.05);
+  margin-top: 10px;
+  border-radius: 15px;
+  display: none;
+  overflow-y: auto;
+}
+
+.autocomplete-item {
+  padding: 1rem 1.5rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  transition: all 0.2s ease;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+}
+.autocomplete-item:last-child {
+  border-bottom: none;
+}
+
+.autocomplete-item:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.autocomplete-pic {
+  width: 40px;
+  height: 40px;
+  margin-right: 1rem;
+}
+
+.autocomplete-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.autocomplete-name {
+  font-weight: bold;
+}
+
+.autocomplete-id {
+  font-size: 0.7rem;
+  color: var(--text-secondary);
+  opacity: 0.8;
+}
 /* #endregion */
 
 /* #region CARD HEADER */
